--- a/CPI.ipynb
+++ b/CPI.ipynb
@@ -2439,6 +2439,76 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iD3aCRm-aWWQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "Let's draw scatter plot of all independent variables vs dependent variable in order to understand the relationship between each other."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MY3-ifDTXmkX",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 297
+        },
+        "outputId": "64455c44-4373-4f02-b635-e654ddb0f022"
+      },
+      "source": [
+        "df_bra = df.dropna()\n",
+        "\n",
+        "plt.subplot(2,2,1)\n",
+        "plt.scatter(df_bra.M1, df_bra.CPI)\n",
+        "plt.xlabel(\"M1\")\n",
+        "plt.ylabel(\"CPI\")\n",
+        "\n",
+        "plt.subplot(2,2,2)\n",
+        "plt.scatter(df_bra.QGDP, df_bra.CPI)\n",
+        "plt.xlabel(\"QGDP\")\n",
+        "plt.ylabel(\"CPI\")\n",
+        "\n",
+        "plt.subplot(2,2,3)\n",
+        "plt.scatter(df_bra.USDTRY, df_bra.CPI)\n",
+        "plt.xlabel(\"USDTRY\")\n",
+        "plt.ylabel(\"CPI\")\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.show()"
+      ],
+      "execution_count": 948,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAagAAAEYCAYAAAAJeGK1AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDMuMC4zLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvnQurowAAIABJREFUeJzt3X+UJGV97/H3h2HEAZFB2aAMrEuU\nLEdCYHEOqHi8gjeuisqKJGBINF4TronmCtds7q6/gr8OmL2RaFA5RE00El0Dy0gEXUwgN9EIcZbd\nZeXHRuSHMKAuyvhrR5nd/d4/unro6enq39VV3f15nbNne6qru56uruf5dj3Pt55SRGBmZlY0++Vd\nADMzs1ocoMzMrJAcoMzMrJAcoMzMrJAcoMzMrJAcoMzMrJAcoMzMrJAcoMzMrJAcoMzMrJD2z7sA\nrTrssMNixYoVeRfDhtSWLVseiYhleZejG1yXLC/N1qO+C1ArVqxgeno672LYgJnaOsOGzTt5aHaO\nI8bHWLt6JWtWTSxZT9L9ORQvE4NYl5r9Hi1fzdajvgtQZt02tXWG9Zt2MDe/F4CZ2TnWb9oB4Mat\nj/h7HDweg7Kht2HzzoVGrWxufi8bNu/MqUTWDn+Pg8cByobeQ7NzLS23YvL3OHgcoGzoHTE+1tJy\nKyZ/j4PHAcqG3trVKxkbHVm0bGx0hLWrV+ZUImuHv8fB4yQJG3rlAXRnf/U3f4+DxwHKjFLj5oas\n//l7HCzu4jMzs0JygDIzs0JygDIzs0JygDIzs0JygDIzs0JygDIzs0LKNEBJuk/SDknbJC2ZNlkl\nH5F0t6TbJJ2UZXnM+pXrkg2jXlwHdVpEPJLy3MuAY5J/pwAfT/43s6Vcl2yo5N3FdybwmSi5GRiX\n9PScy2TWj1yXbOBkHaACuEHSFknn13h+Anig4u8Hk2Vmtpjrkg2drLv4XhARM5J+BfiqpLsi4t9a\nfZOkQp4PsHz58m6X0awfuC7Z0Mn0DCoiZpL/fwBcA5xctcoMcFTF30cmy6rf54qImIyIyWXLGt7G\n3mzguC7ZMMosQEk6SNLB5cfAS4BvVa12LfC6JAPpucCPI+LhrMpk1o9cl2xYZdnFdzhwjaTydv4h\nIr4i6U0AEXE5cD3wcuBuYDfwhgzLY9avXJdsKGUWoCLiHuCEGssvr3gcwJuzKoPZIHBdsmGVd5q5\nmZlZTQ5QZmZWSA5QZmZWSA5QZmZWSA5QZmZWSA5QZmZWSA5QZmZWSA5QZmZWSA5QZmZWSA5QZmZW\nSA5QZmZWSA5QZmZWSA5QZmZWSA5QZmZWSA5QZmZWSA5QZmZWSA5QZmZWSA5QZmZWSHVv+S5pBxC1\nnqJ0l+nfyKRUZhmY2jrDhs07eWh2jiPGx1i7eiVrVk1kvl3Xo/6X17Ez7OoGKOAV7b6xpKOAzwCH\nU6qcV0TEh6vWeRHwReDeZNGmiHhvu9s0SzO1dYb1m3YwN78XgJnZOdZv2gHQi4am7XoErkt5y/nY\nGWp1A1RE3C9pDfAsYEdEbG7hvfcAb4uIWyUdDGyR9NWIuKNqvX+PiI4qsFkjGzbvXGhgyubm97Jh\n887MG5kO6xG4LuUqz2Nn2NUdg5L0MeBC4KnA+yS9q9k3joiHI+LW5PFPgTsBf5uWi4dm51pa3k2d\n1CNwXcpbnsfOsGuUJPFC4PSIWA+8CFjTzkYkrQBWAbfUePp5krZL+rKk41Jef76kaUnTu3btaqcI\nNuSOGB9raXmXdaUegetSHnI+doZaowD1WETsBYiI3ZQGdVsi6UnA1cAFEfGTqqdvBZ4REScAfw1M\n1XqPiLgiIiYjYnLZsmWtFsGMtatXMjY6smjZ2OgIa1ev7MXmO65H4LqUl5yPnaHWKEniWEm3JY8F\nPLPibxplH0kapVShroyITdXPV1ayiLhe0sckHRYRjzT9CcyaUB4ryCkTq6N6BK5Lecr52BlqjQLU\nCZQyhx6oWn4U8L16L5Qk4JPAnRHxoZR1ngZ8PyJC0smUzuh+2EzBKzkF1JqxZtVEXsdF2/UIeluX\nrLZuHjtur5rXKEBdCqyPiPsrF0p6cvLcK+u89lTg94AdkrYly94OLAeIiMuBs4E/krQHmAPOjYha\n14ukcgqo9YFO6hH0qC5Z9txetaZRgDo8InZUL4yIHclgbaqI+BoN+toj4jLgsgZlqMspoNYH2q5H\nyXo9qUuWPbdXrWkUoMbrPFeIFBangBaPuzCWKHw9st4Y9Paq23W/URbftKQ/rF4o6Q+ALW1vtYuc\nAlos5S6Mmdk5gse7MKa2zuRdtDwVvh5Zbwxye5VF3W8UoC4A3iDpXyX9ZfLv/wFvBN7a9la7yCmg\nxVKvC2OIFb4eWW8McnuVRd1vNNXR94HnSzoN+PVk8XURcWPbW+yyyhTQmdk5RqRFO2XIu5Z6btC7\nMNrRD/XIeiOLlPWidKlnUfcbjUEBEBE3ATe1vZWMlb+MVrJjivKlDpojxseYqXFADkIXRqeKXo/6\nWT/V526nrBclKzCLuj8w94Nq5fSy077Sqa0znHrJjRy97jpOveTGQo+v9Lqsg9yFYcU0KOOeaXW1\nXh0uUpd6FnW/qTOoftDK6WWjL7XeL7G8f7G08ksxj7L6qvvhlOcZzCCkbqfV1en7f8TVW2ZqLr/p\nrl01z1ggny71LOq++u1avsnJyZienl6y/NRLbqz5ZU2Mj/H1dacvqkD1PvHY6Miig31sdISLzzp+\nYSc32k6ablTg6oO4VvkqtVvWrHW6L/JsDCVtiYjJnmwsY2l1qVWtHpfddvS661LrtCCXH0lTW2d4\nzz/dzqO75wEYHxvlolcdx5pVEwvHb3nMfG/Ewv/V0paL2nfALMu7jjfSbD0amDOotatXLqkkUPrF\n8ex3fZn5fcH83sbBuNEvsXYGArt1JtPqL8VWytqrRr/TfZH3GawtlfcZTNrYB7Coyw+6d4zUqy9T\nW2dYe9X2Re3N7Nw8F2zcxgUbty0KLuXgUysI1Vve6Ed2dbdaWnnfObWDz93ywEKQfO0pR/H+Ncc3\ntQ96YWDGoNasmuDis45nfGx0yXO75/c1FZzSVDbo7VzH0K1+4laDY7Nl7WUffqf7okh97laSd+Zm\nrbGPat08RhrVlw2bd9Ztb1ppiUbU2sT3E+NjS85c08p73t98g8/e/N1FQfKzN3+Xd04tmfQkNwMT\noKAUpA46oPsnhZUNeisDgeXBzWb7iasHQ985tWPR3+MHLg2+1eWr1GxZe9nod9qY5d0Y2lJ5X3xa\n/nE6MT5Wdz6obh0jjepLt7YzNjrCa085qmHwLSt361WfJaaV9+vf+VHN9/ncLdVzGudnYLr4yrrd\nUFU36M0OBNbql692yNgop15yIw/NznHI2Cg/f2zPwi+vmdk5PnvzdxfWnZmdY3Q/MTqiRb/O6mXJ\nNFvWXjb6zaaiVndJnHbsMm66a1fqr0+nseenVvd6rzM3K1O3034UdusYaVRf6nU5NjIisS9iUV2d\nfMZTFsasJEhLGzjt2Nr392q1Hqd1K+Zh4AJUJwdHtYnkIAE48T03MDtXGvA89MBR/vyVx9Xtz671\nq6XS6H7i54/tWXjP8v/1zO8LxsdGOeiA/ZseK2rmmoteXrvUTGNWa5ypMlhXcxp7voqWuZl1wGxU\nX9auXrlkDKpZT9hfXHzWCQvJFJU/YKt/nFa76a7ad0hutU1stVsxSwMXoE47dlnNxmw/wRP334/d\n8/savoeA8567nPevOb404PmP25nf9/iB8ejuedZetR1g0cBoZQWtd0BMjI+x+7E9Cxk+rZidm+eg\nA/bn0nNO7FoD0GzQ6EYD1Exj1ii4V5rIuTG0knYuPs0qMSfrgJlWX047dtmigDI3v5df7mnc3lSa\nm9/H2qu2s37TbcxVtFXN/ICtNWRQPvNqxWtPOaql9bM0UAFqausMV29ZOrB/0BNGePVJEzWfqyWA\njf/5ANfd9nBqEJnfGwtZSrV+8acp/zZpJziVdTsrqVGF7nbmXKPGrNkuCUGhU2ktXdbZmO3O1tBM\n0KxVX047dtmi65Vm5+br3x+ljvm9zWUcV6sco25miKGsMtW9aFl8AxWg0n55//yxvXW7iGqZ3xcN\ng0i5IW3lF385i6ZTc/N7uWDjNjZs3tmVX4f1KnSv04ib7ZLwuFP/yuqY6uSsrJWgWV1fTr3kxiWf\np9cjOT/7xR6mts6wZtVE021SFtdLdfPMeKACVK8zucoNZLe2O7qfeNIT92d29/yixIB6jXU3f3mm\nHVhpn29mdm6hQnRT2jVtlTzu1N/qHVNHr7uu7Qu4Ozkr6yRoFiGLdH5fLPxobeYHXqd1qFZ7Aa3N\nidrIwASoqa0z7Jdy1XUWRke08IV0IzGj3lhKvVR1KFWit31hOxdu3Na1WSoqD6x6ny+Li2TTulBu\numtXIQbhrXNZXFzb6VlZqxe2X3Tt7QtjQ/vVya7rtZnZudSZJmplCbYjrb04YP/9unpmnGmAkvRS\n4MPACPCJiLik6vkDgM8AzwF+CJwTEfe1up3yzupVcKrO4qv1i7/RVCSVGp1mN3NGUf7s3Z6l4m1f\n2M7eiNTPk1VXXzdnfB4EvapLvdLMMd3qsdXp5RKtXAJRnTi1r0blqJ42rZeCpW1QN6efSmsv0j5v\nu2eYmV2oK2kE+CjwMuDZwGslPbtqtTcCj0bEs4BLgQ+2s61WxoDaJeCvzjmR+y45g63vfsmiL7n6\nQsGJ8THOe+7yJRfYla9jqtTMaXbl+zejm7NUlANfvWBbhO6NQdbLutQrWVxc2+kFw61c2D5fKyJR\naifKbUArdbb82m6KpByV5enWj75W63y748VZnkGdDNwdEfcASPo8cCZwR8U6ZwIXJY+vAi6TpGhx\nBtteNJBB/TOSWr/4yxfYVffRtjOAWH7/ZrNz2jmA2u2mdLJC5npWl3qp2xfXdnr9U6cXtkOpnbjv\nkjMWLWumvk60Wf/qvS7LCWPT2otDDxzlF/P7unYNWpYBagKonDPjQeCUtHUiYo+kHwNPBR6pXEnS\n+cD5AMuXL1+yoW5enJvWlVXrl1CjbJW0bqpOfsVUV6K0cbdWg0YzXS61dCtZoZ9uOJeDntWlvHTj\n4try8VI5i/gB+7fWSdTJhe31yrQwEwTp3W6NxpqrVd6poVfXMZalfV9//srjFj7v0GTxRcQVwBVQ\nukVA9fOtNq5joyOctPwQ/uM7P1oSjNL6bmvNDpzXrNqVlaiZg7PZ94TGga/VmSya0at96SDYuC7l\ntY/Szl6AhYtfmy3PL6oucO32sbR29Uou2Lit5nOH1pgvs7q+pu3ftEkGaqms472+jrGZbXZrX2cZ\noGaAykuSj0yW1VrnQUn7A4dQGuBtSfXOanSflLWrV7Jh887U9aLG+s1OwNjrm6RV/0IbkRaNQbVS\nlmYCX/meNt3Ui33Z57fp6EldynsfVZ+9tFOeZo6lToPwmlUTTN//oyXBZHREC2cQjT5juQwXVlzL\nmDZVUaW0+1vlcR1jLxKZspzN/JvAMZKOlvQE4Fzg2qp1rgVenzw+G7ix3T7zNasm+Pq607n3kjNS\nByYrZ/ttZoxGsOSXSHl28aLdybI8wFudzVfrlhnN3Aa+VuJHVjeg68VktX1+m46e1KWi7aN2ytPo\nWOrWrWXev+Z4/uqcExfVjw1nn9BU/ShnAVaWofx3PRPjY9x7yRkLP7Dr1d9K/XwHgMzOoJJ+8LcA\nmymlxn4qIm6X9F5gOiKuBT4J/L2ku4EfUap4HWumP7uZfuSA1OmM0uSVMNDsr6ROrpbPSi8mq+3n\nStqrulS0fdROeRodS908m2i3flx07e1LsgDn90XdmcrL7Vc7Z5W9nAy62zK9H1REXB8RvxYRz4yI\nDyTL3p1UKCLiFxHxWxHxrIg4uZyl1Klmfv03c5MzaG06ozxnN2i2MhftVzK0do+tduV9z6JO9aIu\nFW0ftVOeRsdSEYJw2sSvEdRsk8bHRhfar3bqby/qV1b6IkmiHY1+3VSP3aRpZjqjtH7hXmr2V1IR\nKmi1ZtN7O1GEexYVXdH2UTvlaXQsFf1s4uKzjq9bD9qpv72oX1kZ2ADVjMog9s6pHVx583dTs/fS\nDuxmrjXoRWZUs5W5qBU06+7Efq6kvVK0fdRueeodS0UIwoceOFpzIurybZjqtSft1t9+nZlFBb6O\nr6bJycmYnp7O5L3rBZK0rLZGiQPtvq7b5c+jPINI0paImMy7HN2QZV0qsrwvN5jaOpN6Q8NGdXFQ\n6m+z9cgBqgXtHNhpF99leZV3I3lX0H7mAGXdMLV1ZmGey2qN2oZBqL/N1qOh7uJrVTunyUUd8+m3\nA9pskKxZNcGFKRf7Nmobhqn+ZprFZ8XLjDKzYnDb0JgDVMb6OcXTzLLjtqExd/F1Wa3+4Uapo2Y2\nfJqZQ2/Y2w0HqC5Ku8r74rOOzy0hwsyKK208Ke95EYvCXXxdVMRZGsys/7gtKXGA6qIiZuyZWf9x\nW1LiANVFzsoxs25wW1LiANVFzsoxs25wW1LiJIkuKtpcZmbWn9yWlPTdVEeSdgE/Bx7JuywNHIbL\n2A1FK+MzImJZ3oXohqQu3V9nlaLse5djqaKUpd1yNFWP+i5AAUiaLvp8aC5jd/RDGQdVUfa9y7FU\nUcqSdTk8BmVmZoXkAGVmZoXUrwHqirwL0ASXsTv6oYyDqij73uVYqihlybQcfTkGZWZmg69fz6DM\nzGzAOUCZmVkh9VWAkvRSSTsl3S1pXd7lqSTpPkk7JG2TNJ0se4qkr0r6dvL/oT0u06ck/UDStyqW\n1SyTSj6S7NvbJJ2UYxkvkjST7Mttkl5e8dz6pIw7Ja3uRRmHRb39XrVepvVQ0gZJdyXH4TWSxlPW\nW1LnurT9up9P0gGSNibP3yJpRbe2XbGNoyTdJOkOSbdLemuNdV4k6ccV39e7u12Oim3V3deZtR8R\n0Rf/gBHgO8CvAk8AtgPPzrtcFeW7DzisatlfAOuSx+uAD/a4TC8ETgK+1ahMwMuBLwMCngvckmMZ\nLwL+tMa6z06+9wOAo5PjYSTv735Q/qXt96p1Mq+HwEuA/ZPHH0yrN7XqXBe23fDzAX8MXJ48PhfY\nmMF38XTgpOTxwcB/1SjHi4Av9ejYqLuvs2o/+ukM6mTg7oi4JyIeAz4PnJlzmRo5E/h08vjTwJpe\nbjwi/g34UZNlOhP4TJTcDIxLenpOZUxzJvD5iPhlRNwL3E3puLDeybweRsQNEbEn+fNm4Mhuvn8D\nzXy+yjp0FfBiSepmISLi4Yi4NXn8U+BOoMjzHGXSfvRTgJoAHqj4+0GK9YUFcIOkLZLOT5YdHhEP\nJ4+/BxyeT9EWSStT0fbvW5Kugk9VdI0WrYyDqNZ+r9Tr7+B/UPplXkutOtepZj7fwjpJIP0x8NQu\nbX+JpAtxFXBLjaefJ2m7pC9LOi6rMtB4X2dyXHiy2O55QUTMSPoV4KuS7qp8MiJCUqFy+otYpsTH\ngfdRqhTvA/6SUkNlHZL0z8DTajz1Dnq43+uVIyK+mKzzDmAPcGXK2yypc8kZ+cCQ9CTgauCCiPhJ\n1dO3UprT7mfJeOEUcExGRcllX/dTgJoBjqr4+8hkWSFExEzy/w8kXUOpq+D7kp4eEQ8np7s/yLWQ\nJWllKsz+jYjvlx9L+hvgS8mfhSljv4qI/97MelX7vVJXvoNG5ZD0+8ArgBdHMshR4z1q1blOG81m\nPl95nQcl7Q8cAvyww+0uIWmUUnC6MiI2VT9fGbAi4npJH5N0WER0fRLZJvZ1JnWzn7r4vgkcI+lo\nSU+gNDh5bc5lAkDSQZIOLj+mNMj7LUrle32y2uuBL+ZTwkXSynQt8LokG+e5wI8rugJ7qqrv+tWU\n9iWUynhukkV1NKVfi//Z6/INqjr7vVLm9VDSS4E/A14VEbtT1kmrc51q5vNV1qGzgRvTgmi7kjGt\nTwJ3RsSHUtZ5WnnsS9LJlNrzLAJlM/s6m/ajFxkg3fpHKVPkvyhl2bwj7/JUlOtXKWX7bAduL5eN\nUr/0vwDfBv4ZeEqPy/U54GFgnlKf8BvTykQp++ajyb7dAUzmWMa/T8pwW3LgP71i/XckZdwJvCzv\n736Q/qXtd+AI4PqK9TKth5SSXx4AtiX/Lq8uR1qd69L2l3w+4L2UAibAE4F/TMr5n8CvZrAPXkCp\nq/W2iv3wcuBNwJuSdd6SfPbtlJJJnp/RcZHWvlWWJZP2w1MdmZlZIfVTF5+ZmQ0RBygzMyskBygz\nMyskBygzMyskBygzMyskB6gBJCkkfbbi7/0l7ZL0peTvYyV9Q9IvJf1pfiU1y5+kIyV9UaUZ/u+R\ndJmkA5LnTpb0r8lzt0q6TtLxyXOVs79/W9ImSc+ueN9/VWlW9O2Svi5pZV6fsV85QA2mnwO/Lmks\n+fs3WXxV94+A/wX8314XzKxIkgtdNwFTEXEMpYu/x4C/kHQ48AXg7RFxTEScBFwMPLPiLS6NiBOT\n124EbpS0rOL58yLiBEqTy27owUcaKA5Qg+t64Izk8WspXRALlKYriYhvUro41myYnQ78IiL+FiAi\n9gIXAq+jdDuaT0fEf5RXjoivRcRUrTeKiI3ADcDv1Hj634BndbnsA88BanB9ntK0QE8EfoPaMyGb\nDbvjgC2VC6I0x919wAmUJmRtxa3AsTWWv5LSDAvWgn6aLNZaEBG3JdP0v5bS2ZSZdUDSLcCTgRsi\nYskdbsurVf19paQ5SgHvTzIs3kDyGdRgu5bSONPnGq1oNqTuAJ5TuUDSkyndCmQLpbs9AxARpwDv\nojR7eZpVlG4uWHZeMka1JiIeSHuR1eYANdg+BbwnIty1YFbbvwAHSnodgKQRSvfBuiz5//clPb9i\n/QPT3kjSayjN9O0fhF3iLr4BFhEPAh+pXi7pacA0pe6KfZIuAJ4dS2+IZjbQIiIkvRr4qKR3AcuA\njRHxAQBJ5wAflDRB6d5pj1Ca2bzsQkm/CxxE6RYUp0fErp5+iAHm2czNzBLJ2dLngFdHRKsJEtZl\nDlBmZlZIHoMyM7NCcoAyM7NCcoAyM7NCcoAyM7NCcoAyM7NCcoAyM7NCcoAyM7NCcoAyM7NCcoAy\nM7NCcoAyM7NCcoAyM7NCcoAyM7NCcoAyM7NCcoAyM7NC6rsbFh522GGxYsWKvIthQ2rLli2PRMSy\nvMthNgz6LkCtWLGC6enpvIthA2Zq6wwbNu/kodk5jhgfY+3qlaxZNbFkPUn351A8s6HUdwHKrNum\nts6wftMO5ub3AjAzO8f6TTsAagYpM+sNj0HZ0NuweedCcCqbm9/Lhs07cyqRmYEDlBkPzc61tNzM\nesMByobeEeNjLS03s95wgLKht3b1SsZGRxYtGxsdYe3qlTmVyMzASRJmC4kQzWTxmVnvOECZUQpS\nDkhmxeIuPjMzKyQHKDMzKyQHKDMzKyQHKDMzKyQHKDMzKyQHKDMzK6RMA5Sk+yTtkLRN0pIpyFXy\nEUl3S7pN0klZlsfMzPpHL66DOi0iHkl57mXAMcm/U4CPJ/+bmdmQy7uL70zgM1FyMzAu6ek5l8nM\nzAog6wAVwA2Stkg6v8bzE8ADFX8/mCxbRNL5kqYlTe/atSujopqZWZFkHaBeEBEnUerKe7OkF7bz\nJhFxRURMRsTksmW+27aZ2TDINEBFxEzy/w+Aa4CTq1aZAY6q+PvIZJmZmQ25zAKUpIMkHVx+DLwE\n+FbVatcCr0uy+Z4L/DgiHs6qTGZm1j+yzOI7HLhGUnk7/xARX5H0JoCIuBy4Hng5cDewG3hDhuUx\nM7M+klmAioh7gBNqLL+84nEAb86qDGZm1r/yTjM3MzOryQHKzMwKyQHKzMwKyQHKzMwKyQHKzMwK\nyQHKzMwKyQHKzMwKyQHKzMwKyQHKzMwKyQHKzMwKyQHKzMwKyQHKzMwKyQHKzMwKyQHKzMwKyQHK\nzMwKyQHKzMwKyQHKzMwKKctbvtuQm9o6w4bNO3lodo4jxsdYu3ola1ZN5F0sM+sTdQOUpB1A1HqK\n0h3bf6POa48CPgMcnrzHFRHx4ap1XgR8Ebg3WbQpIt7bdOmtsKa2zrB+0w7m5vcCMDM7x/pNOwAc\npMysKY3OoF7RwXvvAd4WEbdKOhjYIumrEXFH1Xr/HhGdbMcKaMPmnQvBqWxufi8bNu90gDKzptQN\nUBFxv6Q1wLOAHRGxudk3joiHgYeTxz+VdCcwAVQHKBtAD83OtbTczKxa3SQJSR8DLgSeCrxP0rva\n2YikFcAq4JYaTz9P0nZJX5Z0XMrrz5c0LWl6165d7RTBeuyI8bGWlpuZVWuUxfdC4PSIWA+8CFjT\n6gYkPQm4GrggIn5S9fStwDMi4gTgr4GpWu8REVdExGRETC5btqzVIlgO1q5eydjoyKJlY6MjrF29\nMqcSmVm/aRSgHouIvQARsZtSckTTJI1SCk5XRsSm6ucj4icR8bPk8fXAqKTDWtmGFdOaVRNcfNbx\nTIyPIWBifIyLzzre409m1rRGSRLHSroteSzgmRV/0yCLT8AngTsj4kMp6zwN+H5EhKSTKQXMH7by\nAbrFKdHdt2bVhPehmbWtUYA6gVKa+ANVy48CvtfgtacCvwfskLQtWfZ2YDlARFwOnA38kaQ9wBxw\nbkTUSmvPlFOizcyKp1GAuhRYHxH3Vy6U9OTkuVemvTAivkaDLsGIuAy4rLmiZscp0WZmxdNoDOrw\niNhRvTBZtiKTEuXAKdFmZsXT6AxqvM5zA5MvfMT4GDM1glG/p0R7XM3M+lmjM6hpSX9YvVDSHwBb\nsilS7w1iSnR5XG1mdo7g8XG1qa0zeRfNzKwpjc6gLgCukXQejwekSeAJwKuzLFgvlc8qBulsw+Nq\nZtbvGk119H3g+ZJOA349WXxdRNyYecm6qJmurkFLifa4mpn1u6ZutxERNwE3ZVyWTNRKIb9g4zYu\n2LiNiQE4U0ozqONqZjY8Bv5+ULW6uso6vd6pnSSEXiUurF29clFghv4fVzOz4TJQAapW49+oS2tu\nfi8XXXv7wusOGRtFgtnd83UDSDsX9/byguBBHFczs+GiHCZu6Mjk5GRMT08vWV7d+HfL2OhIzTnk\nTr3kxppdaBPjY3x93ek136ud13RTM2dvTk2vT9KWiJjMuxxmw2BgzqDqdeV1Ii3zrZ0khHYTF7oR\nNJo5e/OUT2ZWJAMToLLMTpvloirZAAAJR0lEQVSZnWPFuusYr+j+209ib42zz3pJCO0kLnQraDST\ndu7UdDMrkkYX6vaNXmSnzc7N8+jueQJqBqdGSQjtXBBcL2i0Ii2Az8zOcfS661K7H+u91swsSwMT\noGo1/s1q6SZXVUakpu931M49kjq9nmlq6wynXnIj9UYayzNNpO0Hp6abWR4Gpouvspsq7UwgzfOf\n+RTu++FcqdEXtJI3si+Cey85o6VyttJd1sn1TK0mjgSlYF358Z2abmZ5GZgABY83/lNbZ3jPP93O\no7vnm3rd1u/Ocsf7XgbAinXXtbTN/SSOXndd1zLeqhMiTjt2GVdvmWnreqZ2EkeC0pmds/jMLG8D\nFaCgvXTz3fP7eOfUDiaf8ZSWt1cei+pGxluthIirt8zwmudMcNNdu1oOGmndgCL9zKxXKe9mZo0M\nTIAqn3m02r1XduXN32XTlgcbrqc6XYCdZrylJURcd9vDbH33S1p+v3rdg55pwsyKbiCSJCpvLdGu\noHQmVc/Y6AiX/vaJTNQZ/6nMimv11hZpZzyP7p5nRRvvWS9rsJ2EDTOzXsr0DErSS4EPAyPAJyLi\nkqrnDwA+AzwH+CFwTkTc1+p2srpIt1LlxLIXbtxWd93K+y9B811+aWc8Za2+Z6PpjgZtBnczGyyZ\nBShJI8BHgd8EHgS+KenaiLijYrU3Ao9GxLMknQt8EDin1W116zqdtO67Qw8cXTQu0yiQlLXS5Te1\ndYaf/3JPV98THITMrH9l2cV3MnB3RNwTEY8BnwfOrFrnTODTyeOrgBdLavmypG5dp3PeKcsZHVm8\n+dER8eevPG7RslauuWomeJa7KGfnmss69IWzZjYMsgxQE8ADFX8/mCyruU5E7AF+DDy11Q11cpFu\n2aEHjvL+Ncez4ewTFo3LbDj7hJo3N6wevzn0wNGa79tM8Gy1i9IXzprZMOiLLD5J5wPnAyxfvnzJ\n89VjLeMHjjZ9DRTA6H6PnyU12yVWvV6t9PZms+LqnRF1cuGsZyY3s36W5RnUDHBUxd9HJstqriNp\nf+AQSskSi0TEFRExGRGTy5Ytq7mxNasm+Pq607n0nBP5yVzjsZxK9XP3mlM+qxofe/xM6omjze3e\ntDOiifExLj3nxLYy7SozGyuTNlrNLCyS8rRN7WZJmll/yfIM6pvAMZKOphSIzgV+p2qda4HXA98A\nzgZujA5uUFVulGtN5FrP3n3Be/7p9q6cXfxyz+Ph7tHd83Wz7iqv3Uo7U2o3yWHQZib3rUDMhk9m\nZ1DJmNJbgM3AncAXIuJ2Se+V9KpktU8CT5V0N/C/gXWdbLPRWE697ItWugRb2X7azOPV126V58GD\n7lyT1Okks0XTrVndzax/ZDoGFRHXA9dXLXt3xeNfAL/Vre3Va3zHRkd4zXMm+OzN301dZ2rrTM+C\nQq0GtzwPXjemGupkktkiGrSAa2aNDcRMEmVpje+IxMVnHc/71yweI6rW6a/xtO3XWp51g9vOvaeK\nrJV9a2aDYaACVFqj/Je//Xiq+EWvOq7WS4HHg0O7g/GtBIWsG9xBm8po0AKumTXWF2nmzWo0tU95\nnbRbcRwxPtbRYHwz2y/rxWStgzSLRCv71swGgzpImsvF5ORkTE9Pd/QeadcsXXzW8akzomdxGwpf\np9R/JG2JiMm8y2E2DAbqDKpZ9X6Np00Em8Vg/CCd4ZiZddtQBihIDw6Dlv1mZtavBipJohs8GG9m\nVgxDewYF9ceAPDZkZpavoQ1QjbL1HJDMzPI1tF18njrHzKzYhjZAeeocM7NiG9oA5alzzMyKbWgD\nlLP1zMyKbWiTJJytZ2ZWbEMboMDZemZmRdZ3c/FJ2gXcn2MRDgMeyXH7veTPutQzImJZ1oUxsz4M\nUHmTND0sk4X6s5pZnoY2ScLMzIrNAcrMzArJAap1V+RdgB7yZzWz3HgMyszMCslnUGZmVkgOUGZm\nVkgOUE2SdJSkmyTdIel2SW/Nu0xZkzQiaaukL+VdlixJGpd0laS7JN0p6Xl5l8nMhnwmiRbtAd4W\nEbdKOhjYIumrEXFH3gXL0FuBO4En512QjH0Y+EpEnC3pCcCBeRfIzHwG1bSIeDgibk0e/5RSwz2w\n8yRJOhI4A/hE3mXJkqRDgBcCnwSIiMciYjbfUpkZOEC1RdIKYBVwS74lydRfAX8G7Mu7IBk7GtgF\n/G3SnfkJSQflXSgzc4BqmaQnAVcDF0TET/IuTxYkvQL4QURsybssPbA/cBLw8YhYBfwcWJdvkcwM\nHKBaImmUUnC6MiI25V2eDJ0KvErSfcDngdMlfTbfImXmQeDBiCifDV9FKWCZWc4coJokSZTGKe6M\niA/lXZ4sRcT6iDgyIlYA5wI3RsTv5lysTETE94AHJJXvVPliYJATX8z6hrP4mncq8HvADknbkmVv\nj4jrcyyTdcefAFcmGXz3AG/IuTxmhqc6MjOzgnIXn5mZFZIDlJmZFZIDlJmZFZIDlJmZFZIDlJmZ\nFZIDVB+QtELSt6qWXSTpTyU9V9ItkrYlM3FflDz/+5J2JdP3fFvSZknPT577aLL+HZLmksfbJJ0t\n6e8k3Zv8vV3Si5PXfEDSByu2/wxJ90ga7+GuMLMh4uug+t+ngd+OiO2SRoCVFc9tjIi3AEg6Ddgk\n6bSIeHOybAXwpYg4sfyCZJqjtRFxVfKaK4BjgPcD2yT9XUTcSWkG8Hd5YlUzy4rPoPrfrwAPA0TE\n3rTbf0TETZSCzfktvPc3SGZsj4g54ELgo5JeDhwcEVd2UnAzs3ocoPrfpcBOSddI+p+Snlhn3VuB\nY1t475cCU+U/klkzHqV01vbH7RTWzKxZDlD9IW26j4iI9wKTwA3A7wBfqfM+anJ7GyT9F/APwAer\nnvso8M2I2Nnke5mZtcUBqj/8EDi0atlTgEcAIuI7EfFxShOdniDpqSnvs4rSjRYbWRsRvwb8H+BT\nVc/tY/DvEWVmBeAA1Qci4mfAw5JOB5D0FErdb1+TdEYy0zqUkhn2AksSFyT9N0rjT3/TwqYvA/aT\ntLqT8puZtcNZfP3jdZQSFMq3+nhPRHxH0geASyXtBvYA50XE3iRmnSPpBcCBwL3Aa5IMvKZEREh6\nP6U7627u5ocxM2vEs5mbmVkhuYvPzMwKyQHKzMwKyQHKzMwKyQHKzMwKyQHKzMwKyQHKzMwKyQHK\nzMwK6f8DgbM+/o0r81IAAAAASUVORK5CYII=\n",
+            "text/plain": [
+              "<Figure size 432x288 with 3 Axes>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wPZAACQwatYC",
+        "colab_type": "text"
+      },
+      "source": [
+        "> Analyzing using **sklearn**\n",
+        "\n",
+        "Now, try to find coefficient of determination, intercept and slope of the first plot using *LinearRegression* method of **sklearn** modules."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "hVg_7Ipta1a9",
@@ -2504,7 +2574,7 @@
         "id": "qc_dv-Zgum2D"
       },
       "source": [
-        "A scatter plot of above \"Actual\" dataset and \"Predict\" (Regression Line) looks like"
+        "The straight line can be seen in the plot, showing how linear regression attempts to draw a straight line that will best minimize the residual sum of squares between the observed responses in the dataset, and the responses predicted by the linear approximation."
       ]
     },
     {
@@ -2588,7 +2658,7 @@
         "colab_type": "text"
       },
       "source": [
-        "> OLS, Ordinary Least Square"
+        "> Analyzing using **statsmodels**"
       ]
     },
     {
