--- a/CPI.ipynb
+++ b/CPI.ipynb
@@ -2315,16 +2315,24 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "fLRmHM4J0G9i",
+        "colab_type": "text"
+      },
+      "source": [
+        "\\begin{align*}\n",
+        "y &= \\beta _0 + \\beta_1 x +\\epsilon, \\tag{true} \\\\\n",
+        "\\hat{y} &= b_0 + b_1 x, \\tag{prediction} \\\\\n",
+        "e &= y - \\hat{y}, \\tag{residuals} \\\\\n",
+        "\\end{align*}"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "FrzQBWJmxmiq",
         "colab_type": "text"
       },
       "source": [
-        "$$y = \\beta _0 + \\beta_1 x +\\epsilon \\quad \\text{(true)}$$\n",
-        "\n",
-        "$$\\hat{y} = b_0 + b_1 x \\quad \\text{(prediction)}$$\n",
-        "\n",
-        "$$ e = y - \\hat{y} \\quad \\text{(residuals)}$$\n",
-        "\n",
         "$$ SST = \\sum (y - \\bar{y})^2 \\quad \\text{(Sum of Squares Total, SST)} $$\n",
         "\n",
         "$$ SSE = \\text{Minimize} 􏰘\\sum e^2 = \\sum (y - \\hat{y})^2 \\quad \\text{(OLS or Sum of the Squared Error)} $$\n",
@@ -2345,20 +2353,35 @@
         "\n",
         "$$ MSR = \\frac{SSR}{k}$$\n",
         "\n",
-        "$$ F = \\frac{MSR}{MSE} $$\n",
-        "\n",
+        "$$ F = \\frac{MSR}{MSE} $$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FXW1c30s1T3C",
+        "colab_type": "text"
+      },
+      "source": [
         "> t-test\n",
-        "$$\n",
-        "\\begin{aligned}\n",
+        "\n",
+        "\\begin{align*}\n",
         "H_0&: \\beta_0 = 0 \\quad \\text{test ediyoruz} \\\\\n",
         "H_1&: \\beta_0 \\ne 0 \\\\\n",
         "t_{b_0}&=\\frac{b_0-\\beta_0}{s_{b_0}} \\\\\n",
         "H_0&: \\beta_1 = 0 \\quad \\text{test ediyoruz} \\\\\n",
         "H_1&: \\beta_1 \\ne 0 \\\\\n",
         "t_{b_1}&=\\frac{b_1-\\beta_1}{s_{b_1}} \\\\\n",
-        "\\end{aligned}\n",
-        "$$\n",
-        "\n",
+        "\\end{align*}"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jLWXmDC81ZR0",
+        "colab_type": "text"
+      },
+      "source": [
         "where;\n",
         "\n",
         "* $\\beta_0$: intercept\n",
