--- a/CPI.ipynb
+++ b/CPI.ipynb
@@ -7,7 +7,6 @@
       "version": "0.3.2",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2115,14 +2114,12 @@
         "\n",
         "3. Data is modeled as-is\n",
         "\n",
-        "$$\n",
         "\\begin{align*}\n",
         "  \\text{Forecast equation} && \\hat{Y}_{t+p} &= L_{t} + pT_{t} + S_{t-s+p} \\\\\n",
         "  \\text{Level equation} && L_{t} &= \\alpha(Y_{t} - S_{t-s}) + (1 - \\alpha)(L_{t-1} + T_{t-1})\\\\\n",
         "  \\text{Trend equation} && T_{t} &= \\beta^*(L_{t} - L_{t-1}) + (1 - \\beta^*)T_{t-1}\\\\\n",
         "  \\text{Seasonality equation} && S_{t} &= \\gamma (Y_{t}-L_{t-1}-T_{t-1}) + (1-\\gamma)S_{t-s},\n",
         "\\end{align*}\n",
-        "$$\n",
         "\n",
         "> **Multiplicative model**\n",
         "\n",
@@ -2132,14 +2129,12 @@
         "\n",
         "3. Data is modeled just as additive but after taking logarithm (with base as natural or base 10)\n",
         "\n",
-        "$$\n",
         "\\begin{align*}\n",
         "  \\text{Forecast equation}&& \\hat{y}_{t+p} &= (L_{t} + pT_{t})S_{t-s+p} \\\\\n",
         "  \\text{Level equation} && L_{t} &= \\alpha \\frac{Y_{t}}{S_{t-s}} + (1 - \\alpha)(L_{t-1} + T_{t-1})\\\\\n",
         "  \\text{Trend equation} && T_{t} &= \\beta(L_{t}-L_{t-1}) + (1 - \\beta)T_{t-1} \\\\\n",
         "  \\text{Seasonality equation} && S_{t} &= \\gamma \\frac{Y_t}{(L_{t-1} + T_{t-1})} + (1 - \\gamma)s_{t-s}\n",
         "\\end{align*}\n",
-        "$$\n",
         "\n",
         "where;\n",
         "\n",
@@ -2320,9 +2315,9 @@
       },
       "source": [
         "\\begin{align*}\n",
-        "y &= \\beta _0 + \\beta_1 x +\\epsilon, \\tag{true} \\\\\n",
-        "\\hat{y} &= b_0 + b_1 x, \\tag{prediction} \\\\\n",
-        "e &= y - \\hat{y}, \\tag{residuals} \\\\\n",
+        "\\text{true} && y &= \\beta _0 + \\beta_1 x +\\epsilon \\\\\n",
+        "\\text{prediction} && \\hat{y} &= b_0 + b_1 x \\\\\n",
+        "\\text{residuals} && e &= y - \\hat{y} \\\\\n",
         "\\end{align*}"
       ]
     },
@@ -2333,27 +2328,20 @@
         "colab_type": "text"
       },
       "source": [
-        "$$ SST = \\sum (y - \\bar{y})^2 \\quad \\text{(Sum of Squares Total, SST)} $$\n",
+        "\\begin{align*}\n",
+        "b_1 &= \\frac{\\sum xy - n \\bar{x} \\bar{y}}{\\sum x^2 - n \\bar{x}^2} \\\\\n",
+        "b_0 &= \\bar{y} - b_1 \\bar{x} \\\\\n",
         "\n",
-        "$$ SSE = \\text{Minimize} 􏰘\\sum e^2 = \\sum (y - \\hat{y})^2 \\quad \\text{(OLS or Sum of the Squared Error)} $$\n",
+        "\\text{(Sum of Squares Total, SST)} && SST &= SSR+SSE = \\sum (y - \\bar{y})^2 \\\\\n",
+        "\\text{(OLS or Sum of the Squared Error)} && SSE &= \\text{Minimize} 􏰘\\sum e^2 = \\sum (y - \\hat{y})^2 \\\\\n",
+        "\\text{(Sum of Squares due to Regression)} && SSR &= \\sum (\\hat{y} - \\bar{y})^2 \\quad \\\\\n",
         "\n",
-        "$$ b_1 = \\frac{\\sum xy - n \\bar{x} \\bar{y}}{\\sum x^2 - n \\bar{x}^2} $$\n",
-        "\n",
-        "$$ b_0 = \\bar{y} - b_1 \\bar{x} $$\n",
-        "\n",
-        "$$ SSR = \\sum (\\hat{y} - \\bar{y})^2 \\quad \\text{(Sum of Squares due to Regression, SSR)} $$\n",
-        "\n",
-        "$$ SST = SSR+SSE $$\n",
-        "\n",
-        "$$ r^2 = \\frac{SSR}{SST} = 1-\\frac{SSE}{SST} $$\n",
-        "\n",
-        "$$ s^2 = MSE = \\frac{SSE}{n-k-1} = \\frac{\\sum e^2}{n-2} $$\n",
-        "\n",
-        "$$ s = \\sqrt{\\frac{\\sum e^2}{n-2}}, s_{b_0} = s \\sqrt{\\frac{\\sum X^2}{n \\sum x^2}}, s_{b_1} = s \\sqrt{\\frac{1}{\\sum x^2}} $$\n",
-        "\n",
-        "$$ MSR = \\frac{SSR}{k}$$\n",
-        "\n",
-        "$$ F = \\frac{MSR}{MSE} $$"
+        "r^2 &= \\frac{SSR}{SST} = 1-\\frac{SSE}{SST} \\\\\n",
+        "s^2 &= MSE = \\frac{SSE}{n-k-1} = \\frac{\\sum e^2}{n-2} \\\\\n",
+        "s &= \\sqrt{\\frac{\\sum e^2}{n-2}}, s_{b_0} = s \\sqrt{\\frac{\\sum X^2}{n \\sum x^2}}, s_{b_1} = s \\sqrt{\\frac{1}{\\sum x^2}} \\\\\n",
+        "MSR &= \\frac{SSR}{k} \\\\\n",
+        "F &= \\frac{MSR}{MSE} \\\\\n",
+        "\\end{align*}"
       ]
     },
     {
