--- a/CPI.ipynb
+++ b/CPI.ipynb
@@ -66,7 +66,7 @@
         "colab_type": "text"
       },
       "source": [
-        "This study is prepared by using Python3 codes in Colaboratory environment of Google. [Colaboratory](http://colab.research.google.com/) is a Google research project created to help disseminate machine learning education and research. It's a Jupyter notebook environment that requires no setup to use and runs entirely in the cloud."
+        "This study is prepared by using Python 3 codes in Colaboratory environment of Google. [Colaboratory](http://colab.research.google.com/) is a Google research project created to help disseminate machine learning education and research. It's a Jupyter notebook environment that requires no setup to use and runs entirely in the cloud."
       ]
     },
     {
@@ -76,7 +76,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Disable warnings for clean outputs."
+        "First, disable warnings for clean outputs."
       ]
     },
     {
@@ -2108,7 +2108,7 @@
         "\n",
         "> **Additive model**\n",
         "\n",
-        "1. Data is represented in terms of addition of seasonality, trend-cyclical and residual components. $y_{t} = S_{t} + T_{t} + R_t$\n",
+        "1. Data is represented in terms of addition of seasonality, trend-cyclical and residual components. $Y_{t} = S_{t} + T_{t} + R_t$\n",
         "\n",
         "2. Used where change is measured in absolute quantity\n",
         "\n",
@@ -2123,14 +2123,14 @@
         "\n",
         "> **Multiplicative model**\n",
         "\n",
-        "1. Data is represented in terms of multiplication of seasonality, trend-cyclical and residual components. $y_{t} = S_{t} \\times T_{t} \\times R_t$\n",
+        "1. Data is represented in terms of multiplication of seasonality, trend-cyclical and residual components. $Y_{t} = S_{t} \\times T_{t} \\times R_t$\n",
         "\n",
         "2. Used where change is measured in percent(%) change\n",
         "\n",
         "3. Data is modeled just as additive but after taking logarithm (with base as natural or base 10)\n",
         "\n",
         "\\begin{align*}\n",
-        "  \\text{Forecast equation}&& \\hat{y}_{t+p} &= (L_{t} + pT_{t})S_{t-s+p} \\\\\n",
+        "  \\text{Forecast equation}&& \\hat{Y}_{t+p} &= (L_{t} + pT_{t})S_{t-s+p} \\\\\n",
         "  \\text{Level equation} && L_{t} &= \\alpha \\frac{Y_{t}}{S_{t-s}} + (1 - \\alpha)(L_{t-1} + T_{t-1})\\\\\n",
         "  \\text{Trend equation} && T_{t} &= \\beta(L_{t}-L_{t-1}) + (1 - \\beta)T_{t-1} \\\\\n",
         "  \\text{Seasonality equation} && S_{t} &= \\gamma \\frac{Y_t}{(L_{t-1} + T_{t-1})} + (1 - \\gamma)s_{t-s}\n",
@@ -2332,9 +2332,9 @@
         "b_1 &= \\frac{\\sum xy - n \\bar{x} \\bar{y}}{\\sum x^2 - n \\bar{x}^2} \\\\\n",
         "b_0 &= \\bar{y} - b_1 \\bar{x} \\\\\n",
         "\n",
-        "\\text{(Sum of Squares Total, SST)} && SST &= SSR+SSE = \\sum (y - \\bar{y})^2 \\\\\n",
-        "\\text{(OLS or Sum of the Squared Error)} && SSE &= \\text{Minimize} 􏰘\\sum e^2 = \\sum (y - \\hat{y})^2 \\\\\n",
-        "\\text{(Sum of Squares due to Regression)} && SSR &= \\sum (\\hat{y} - \\bar{y})^2 \\quad \\\\\n",
+        "\\text{Sum of Squares Total} && SST &= SSR+SSE = \\sum (y - \\bar{y})^2 \\\\\n",
+        "\\text{OLS or Sum of the Squared Error} && SSE &= \\text{Minimize} 􏰘\\sum e^2 = \\sum (y - \\hat{y})^2 \\\\\n",
+        "\\text{Sum of Squares due to Regression} && SSR &= \\sum (\\hat{y} - \\bar{y})^2 \\quad \\\\\n",
         "\n",
         "r^2 &= \\frac{SSR}{SST} = 1-\\frac{SSE}{SST} \\\\\n",
         "s^2 &= MSE = \\frac{SSE}{n-k-1} = \\frac{\\sum e^2}{n-2} \\\\\n",
