--- a/CPI.ipynb
+++ b/CPI.ipynb
@@ -2398,9 +2398,9 @@
       },
       "source": [
         "\\begin{align*}\n",
-        "\\text{Sum of Squares Total} && SST &= SSR+SSE = \\sum (y - \\bar{y})^2 \\\\\n",
-        "\\text{OLS or Sum of the Squared Error} && SSE &= \\text{Minimize} 􏰘\\sum e^2 = \\sum (y - \\hat{y})^2 \\\\\n",
-        "\\text{Sum of Squares due to Regression} && SSR &= \\sum (\\hat{y} - \\bar{y})^2 \\quad \\\\\n",
+        "\\text{Total Sum of Squares} && SST &= SSR+SSE = \\sum (y - \\bar{y})^2 \\\\\n",
+        "\\text{Unexplained part of Sum of the Squares (Error, Residuals)} && SSE &= \\text{Minimize} 􏰘\\sum e^2 = \\sum (y - \\hat{y})^2 \\\\\n",
+        "\\text{Explained part of Sum of Squares (Regression)} && SSR &= \\sum (\\hat{y} - \\bar{y})^2 \\quad \\\\\n",
         "&& MSR &= \\frac{SSR}{k} \\\\\n",
         "&& MSE &= s^2 = \\frac{SSE}{n-k-1} = \\frac{\\sum e^2}{n-2} \\\\\n",
         "&& F &= \\frac{MSR}{MSE} \\\\\n",
